--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 		const firebaseConfig = {
-			apiKey: "AIzaSyA8cQId-Wnwuo56efQuwSeQGxZEY5-YqbE",
-			authDomain: "chemistry-voice-hub.firebaseapp.com",
-			projectId: "chemistry-voice-hub",
-			storageBucket: "chemistry-voice-hub.firebasestorage.app",
-			messagingSenderId: "132800280681",
-			appId: "1:132800280681:web:6a3b02f5fb540f93498af8",
-			measurementId: "G-Z006B6ZWG4"
+			apiKey: "",
+			authDomain: "",
+			projectId: "",
+			storageBucket: "",
+			messagingSenderId: "",
+			appId: "",
+			measurementId: ""
 		};
 
 		// Initialize Firebase
@@ -141,4 +141,5 @@
 
 	<script type="module" src="script.js"></script>
 </body>
+
 </html>
