--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
 		// Your web app's Firebase configuration
 		// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 		const firebaseConfig = {
-			apiKey: "",
-			authDomain: "",
-			projectId: "",
-			storageBucket: "",
-			messagingSenderId: "",
-			appId: "",
-			measurementId: ""
+		    apiKey: "AIzaSyAPyIt9nTNxB4-OVtM10i_YvYZ3462Rs90",
+		    authDomain: "chemist-anon-hub.firebaseapp.com",
+		    projectId: "chemist-anon-hub",
+		    storageBucket: "chemist-anon-hub.firebasestorage.app",
+		    messagingSenderId: "513901879719",
+		    appId: "1:513901879719:web:fc4038a237e4049e359682",
+		    measurementId: "G-92GBQ3PZ4D"
 		};
 
 		// Initialize Firebase
@@ -143,3 +143,4 @@
 </body>
 
 </html>
+
